--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -1,45 +1,142 @@
-@INPROCEEDINGS{Coyne2001,
-  author = {Bob Coyne and Richard Sproat},
-  title = {WordsEye: An Automatic Text-to-Scene Conversion System},
-  booktitle = {SIGGRAPH 2001, Computer Graphics Proceedings},
-  year = {2001},
-  editor = {Eugene Fiume},
-  series = {Annual Conference Series},
-  pages = {487--496},
-  publisher = {ACM Press / ACM SIGGRAPH},
-  abstract = {Natural language is an easy and effective medium for describing visual
-	ideas and mental images. Thus, we foresee the emergence of language-based
-	3D scene generation systems to let ordinary users quickly create
-	3D scenes without having to learn special software, acquire artistic
-	skills, or even touch a desktop window-oriented interface. WordsEye
-	is such a system for automatically converting text into representative
-	3D scenes. WordsEye relies on a large database of 3D models and poses
-	to depict entities and actions. Every 3D model can have associated
-	shape displacements, spatial tags, and functional properties to be
-	used in the depiction process. We describe the linguistic analysis
-	and depiction techniques used by WordsEye along with some general
-	strategies by which more abstract concepts are made depictable.},
-  keywords = {Applications, HCI (Human-Computer Interface), Multimedia, Text-to-Scene
-	Conversion, Scene Generation},
-  timestamp = {2010.04.15},
-  url = {http://visinfo.zib.de/EVlib/Show?EVL-2001-140}
+@inproceedings{anisotropicNoise,
+  author = {Goldberg, Alexander and Zwicker, Matthias and Durand, Fr\'{e}do},
+  title = {Anisotropic Noise},
+  year = {2008},
+  isbn = {9781450301121},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/1399504.1360653},
+  doi = {10.1145/1399504.1360653},
+  booktitle = {ACM SIGGRAPH 2008 Papers},
+  articleno = {Article 54},
+  numpages = {8},
+  location = {Los Angeles, California},
+  series = {SIGGRAPH ’08}
 }
 
-@ARTICLE{Miller1995,
-  author = {Miller, George A.},
-  title = {WordNet: A Lexical Database For English},
-  journal = {Commun. ACM},
-  year = {1995},
-  volume = {38},
-  pages = {39--41},
-  month = {November},
-  acmid = {219748},
+@article{appearanceTextureSynthesis,
+  author = {Lefebvre, Sylvain and Hoppe, Hugues},
+  year = {2006},
+  month = {07},
+  pages = {541-548},
+  title = {Appearance-space texture synthesis},
+  volume = {25},
+  journal = {ACM Trans. Graph.},
+  doi = {10.1145/1141911.1141921}
+}
+
+@article{gaborNoise,
+  author    = { Lagae, Ares and Lefebvre, Sylvain and Drettakis, George and Dutr\'e, {\relax Ph}ilip },
+  title     = { Procedural Noise using Sparse Gabor Convolution },
+  journal   = { ACM Transactions on Graphics (Proceedings of ACM SIGGRAPH 2009) },
+  year      = { 2009 },
+  month     = { July },
+  volume    = { 28 },
+  number    = { 3 },
+  pages     = { 54--64 },
+  doi       = { 10.1145/1531326.1531360 },
+  lirias    = { https://lirias.kuleuven.be/handle/123456789/267512 },
+  publisher = { Association for Computing Machinery },
+}
+
+@article{gaborNoiseByExample,
+  author  = { Galerne, Bruno and Lagae, Ares and Lefebvre, Sylvain and Drettakis, George },
+  title   = { Gabor Noise by Example },
+  journal = { ACM Transactions on Graphics (Proceedings of ACM SIGGRAPH 2012) },
+  year    = { 2012 },
+  month   = { July },
+  volume  = { 31 },
+  number  = { 4 },
+  pages   = { 73:1--73:9 },
+  doi     = { 10.1145/2185520.2335424 },
+  lirias  = { https://lirias.kuleuven.be/handle/123456789/356911 },
+}
+
+@article{randomPhaseNoise,
+  author = {Gilet, Guillaume and Sauvage, Basile and Vanhoey, Kenneth and Dischler, Jean-Michel and Ghazanfarpour, Djamchid},
+  title = {Local Random-Phase Noise for Procedural Texturing},
+  year = {2014},
+  issue_date = {November 2014},
+  publisher = {Association for Computing Machinery},
   address = {New York, NY, USA},
-  doi = {http://doi.acm.org/10.1145/219717.219748},
-  issn = {0001-0782},
-  issue = {11},
-  numpages = {3},
+  volume = {33},
+  number = {6},
+  issn = {0730-0301},
+  url = {https://doi.org/10.1145/2661229.2661249},
+  doi = {10.1145/2661229.2661249},
+  journal = {ACM Trans. Graph.},
+  month = nov,
+  articleno = {Article 195},
+  numpages = {11},
+  keywords = {noise synthesis, by-example texturing, procedural texturing}
+}
+
+@article{phasorNoise,
+  TITLE = {{Procedural Phasor Noise}},
+  AUTHOR = {Tricard, Thibault and Efremov, Semyon and Zanni, C{\'e}dric and Neyret, Fabrice and Mart{\'i}nez, Jon{\`a}s and Lefebvre, Sylvain},
+  URL = {https://hal.archives-ouvertes.fr/hal-02118508},
+  JOURNAL = {{ACM Transactions on Graphics}},
+  PUBLISHER = {{Association for Computing Machinery}},
+  VOLUME = {38},
+  NUMBER = {4},
+  PAGES = {Article No. 57:1-13},
+  YEAR = {2019},
+  MONTH = Jul,
+  DOI = {10.1145/3306346.3322990},
+  KEYWORDS = {noise ; textures ; procedural ; texture synthesis ; pattern ; Gabor},
+  PDF = {https://hal.archives-ouvertes.fr/hal-02118508/file/ProceduralPhasorNoise.pdf},
+  HAL_ID = {hal-02118508},
+  HAL_VERSION = {v1},
+}
+
+@article{stripes,
+  author = {Kn\"{o}ppel, Felix and Crane, Keenan and Pinkall, Ulrich and Schr\"{o}der, Peter},
+  title = {Stripe Patterns on Surfaces},
+  journal = {ACM Trans. Graph.},
+  volume = {34},
+  issue = {4},
+  year = {2015},
   publisher = {ACM},
-  timestamp = {2010.11.10},
-  url = {http://doi.acm.org/10.1145/219717.219748}
+  address = {New York, NY, USA},
+}
+
+@article{survey,
+  TITLE = {{A Survey of Procedural Noise Functions}},
+  AUTHOR = {Lagae, Ares and Lefebvre, Sylvain and Cook, Rob and Derose, Tony and Drettakis, George and Ebert, David S. and Lewis, J.P. and Perlin, Ken and Zwicker, Matthias},
+  URL = {https://hal.inria.fr/hal-00920177},
+  JOURNAL = {{Computer Graphics Forum}},
+  PUBLISHER = {{Wiley}},
+  VOLUME = {29},
+  NUMBER = {8},
+  PAGES = {2579-2600},
+  YEAR = {2010},
+  DOI = {10.1111/j.1467-8659.2010.01827.x},
+  PDF = {https://hal.inria.fr/hal-00920177/file/document.pdf},
+  HAL_ID = {hal-00920177},
+  HAL_VERSION = {v1},
+}
+
+@article{textureSynthesis,
+  author = {Wei, Li-Yi and Levoy, Marc},
+  year = {2001},
+  month = {06},
+  pages = {},
+  title = {Texture Synthesis over Arbitrary Manifold Surfaces},
+  journal = {Computer Graphics (Proc. of Siggraph'01)},
+  doi = {10.1145/383259.383298}
+}
+
+@techreport{spectrumOfVariance,
+  TITLE = {{Understanding and controlling contrast oscillations in stochastic texture algorithms using Spectrum of Variance}},
+  AUTHOR = {Neyret, Fabrice and Heitz, Eric},
+  URL = {https://hal.inria.fr/hal-01349134},
+  TYPE = {Research Report},
+  PAGES = {8},
+  INSTITUTION = {{LJK / Grenoble University - INRIA}},
+  YEAR = {2016},
+  MONTH = May,
+  KEYWORDS = {noise ; Gabor ; procedural texture ; Fourier ; signal processing},
+  PDF = {https://hal.inria.fr/hal-01349134/file/main.pdf},
+  HAL_ID = {hal-01349134},
+  HAL_VERSION = {v1},
 }
